--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ header, footer {
   background: #606060;
   width: 100%;
   height: 100px;
-  color: white;
+  color: red;
   margin: 0 0 10px 0;
 }
 
